--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,14 @@
-name: Node.js CI1
+name: Node.js CI
 
 on:
   push:
     branches: [ "feat/local" ]
   pull_request:
     branches: [ "main" ]
+
+
+
+
 
 jobs:
   build:
@@ -27,8 +31,9 @@ jobs:
     - run: npm run build --if-present
 
 
-
-
+  remove:
+    runs-on: ubuntu-latest
+    steps:
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --delete
@@ -38,7 +43,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-east-1'
 
-    
+
+  upload:
+    runs-on: ubuntu-latest
+    needs: [ remove ]
+    steps:    
     - uses: awact/s3-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
@@ -48,3 +57,4 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
