--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,7 @@ jobs:
 
   remove:
     runs-on: ubuntu-latest
+    needs: [ build ]
     steps:
     - uses: jakejarvis/s3-sync-action@master
       with:
